# vivienda-api

./: .dockerignore  .gitignore  Dockerfile  README.md  chat.py  docker-compose.yml  downloads.sh  error_log.txt  init.sql  main.py  package-lock.json  populate_db.py  pyproject.toml  requirements.txt  run_all.sh
.github/workflows/: reimaginaurbanoapi.yml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate-global-python-argcomplete  activate.bat  jsondiff  jsonpatch  jsonpointer  python-argcomplete-check-easy-install-script  register-python-argcomplete
nginx/: nginx.conf
nginx/sites-enabled/: default
notebooks/: capillas.ipynb  services.ipynb  services2.ipynb
scripts/: _deprecated.py  accesability.py  accessibility.py  assign_establishments.py  combine_all.py  gather_buildings.py  gather_denue.py  green_area.py  inegi_denue.py  landuse.py  populate_db.py  predios_dt.py  process_lots.py  raster_to_geojson.py  small.py  small2.py  utilization.py
src/: main.py
src/scripts/: accessibility.py  assign_establishments.py  column_descriptions.yml  gather_buildings.py  gather_buildings2.py  gather_denue.py  gather_vegetation.py  landuse.py  populate_db.py  process_lots.py  raster_to_geojson.py  slopes.py  test.py  to_geojsons.py  utilization.py
src/scripts/utils/: constants.py  utils.py
src/utils/: constants.py  db.py  files.py  utils.py
utils/: constants.py  files.py  utils.py
