[tool.poetry]
name = "vivienda-api"
version = "0.1.0"
description = ""
authors = ["alexglz <alex.glz.v@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^0.14.4"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
scikit-learn = "^1.5.0"
osmnx = "^1.9.3"
earthengine-api = "^0.1.405"
matplotlib = "^3.9.0"
pandana = "^0.7"
openai = "^1.31.0"
tenacity = "^8.3.0"
termcolor = "^2.4.0"
tabulate = "^0.9.0"
tables = "^3.9.2"
pyogrio = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
