[tool.poetry]
name = "vivienda-api"
version = "0.1.0"
description = ""
authors = ["alexglz <alex.glz.v@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^0.14.4"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
scikit-learn = "^1.5.0"
osmnx = "^1.9.3"
earthengine-api = "^0.1.405"
matplotlib = "^3.9.0"
openai = "^1.31.0"
tenacity = "^8.3.0"
termcolor = "^2.4.0"
tabulate = "^0.9.0"
pyogrio = "^0.8.0"
sqlalchemy = "^2.0.31"
pyodbc = "^5.1.0"
azure-storage-blob = "^12.20.0"
numpy = "<2.0.0"
pandana = "^0.7"
pybind11 = ">=2.12"
tables = "^3.9.2"
elevation = "^1.1.3"
scipy = "^1.14.0"
gdal = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
