[tool.poetry]
name = "vivienda-api"
version = "0.1.0"
description = ""
authors = ["alexglz <alex.glz.v@hotmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^0.14.4"
uvicorn = "^0.30.1"
gunicorn = "^23.0.0"
fastapi = "^0.111.0"
scikit-learn = "^1.5.0"
osmnx = "^1.9.3"
tenacity = "^8.3.0"
termcolor = "^2.4.0"
tabulate = "^0.9.0"
pyogrio = "^0.8.0"
sqlalchemy = "^2.0.31"
pyodbc = "^5.1.0"
numpy = "<2.0.0"
pandana = "^0.7"
psycopg2 = "^2.9.9"
tqdm = "^4.66.5"

# Optional dependencies for running scripts
gdal = { version = "^3.9.1", optional = true }
earthengine-api = { version = "^0.1.405", optional = true }
matplotlib = { version = "^3.9.0", optional = true }
pybind11 = { version = ">=2.12", optional = true }
tables = { version = "^3.9.2", optional = true }
elevation = { version = "^1.1.3", optional = true }
scipy = { version = "^1.14.0", optional = true }
mapclassify = { version = "^2.8.0", optional = true }
rioxarray = { version = "^0.7.0", optional = true }
aiohttp = { version = "^3.10.10", optional = true }

[tool.poetry.extras]
scripts = [
    "gdal",
    "earthengine-api",
    "matplotlib",
    "pybind11",
    "tables",
    "elevation",
    "scipy",
    "mapclassify",
    "rioxarray",
    "aiohttp",
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
